Revamp reglog UI to handle spambots better. Shorten some reglog phrase names. Shorten some modlog phrase names.
Add account_privacy phrase.
Tweak account_blocked phrase.
Add account_menu_privacy phrase.
Add account_privacy_head phrase.
Add account_privacy_profile_comments phrase.
Add account_privacy_button phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -140,11 +140,12 @@
 		"profile": "%s's Profile",
 		"account":"My Account",
 		"account_password":"Edit Password",
+		"account_privacy":"Privacy",
 		"account_mfa":"Manage 2FA",
 		"account_mfa_setup":"Setup 2FA",
 		"account_email":"Email Manager",
 		"account_logins":"Logins",
-		"account_blocked":"Blocked",
+		"account_blocked":"Blocks",
 		"account_penalties":"Penalties",
 		"account_level_list":"Level Progress",
 		"convos":"Conversations",
@@ -503,6 +504,7 @@
 		"account_menu_security":"Security",
 		"account_menu_notifications":"Notifications",
 		"account_menu_logins":"Logins",
+		"account_menu_privacy":"Privacy",
 		"account_menu_blocked":"Blocked",
 		"account_menu_penalties":"Penalties",
 		"account_menu_messages":"Messages",
@@ -532,6 +534,10 @@
 		"account_password_new_password":"New Password",
 		"account_password_confirm_password":"Confirm Password",
 		"account_password_update_button":"Update",
+
+		"account_privacy_head":"Privacy",
+		"account_privacy_profile_comments":"Enable Profile Comments",
+		"account_privacy_button":"Update",
 
 		"account_mfa_head":"Manage 2FA",
 		"account_mfa_disable_explanation":"You can disable two-factor authentication on your account and go back to logging in normal with just your password by clicking on the following button.",
@@ -1001,27 +1007,27 @@
 		"panel_statistics_memory_no_memory":"No memory chunks could be found in the selected time range",
 
 		"panel_logs_menu_head":"Logs",
-		"panel_logs_registration_head":"Registrations",
-		"panel_logs_registration_attempt":"Attempt",
-		"panel_logs_registration_email":"email",
-		"panel_logs_registration_reason":"reason",
-		"panel_logs_registration_no_logs":"There aren't any registrations logged.",
+		"panel_logs_reg_head":"Registrations",
+		"panel_logs_reg_attempt":"Attempt: ",
+		"panel_logs_reg_email":"email: ",
+		"panel_logs_reg_reason":"reason: ",
+		"panel_logs_reg_no_logs":"There aren't any registrations logged.",
 
-		"panel_logs_moderation_head":"Mod Action Logs",
-		"panel_logs_moderation_action_topic_stick":"<a href='%s'>%s</a> was pinned by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_unstick":"<a href='%s'>%s</a> was unpinned by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_lock":"<a href='%s'>%s</a> was locked by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_unlock":"<a href='%s'>%s</a> was reopened by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_delete":"Topic #%d was deleted by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_move":"<a href='%s'>%s</a> was moved by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_move_dest":"<a href='%s'>%s</a> was moved to <a href='%s'>%s</a> by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_topic_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_reply_delete":"A reply in <a href='%s'>%s</a> was deleted by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_user_ban":"<a href='%s'>%s</a> was banned by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_user_unban":"<a href='%s'>%s</a> was unbanned by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_user_activate":"<a href='%s'>%s</a> was activated by <a href='%s'>%s</a>",
-		"panel_logs_moderation_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
-		"panel_logs_moderation_no_logs":"There aren't any events logged.",
+		"panel_logs_mod_head":"Mod Action Logs",
+		"panel_logs_mod_action_topic_stick":"<a href='%s'>%s</a> was pinned by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_unstick":"<a href='%s'>%s</a> was unpinned by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_lock":"<a href='%s'>%s</a> was locked by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_unlock":"<a href='%s'>%s</a> was reopened by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_delete":"Topic #%d was deleted by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_move":"<a href='%s'>%s</a> was moved by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_move_dest":"<a href='%s'>%s</a> was moved to <a href='%s'>%s</a> by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_topic_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_reply_delete":"A reply in <a href='%s'>%s</a> was deleted by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_user_ban":"<a href='%s'>%s</a> was banned by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_user_unban":"<a href='%s'>%s</a> was unbanned by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_user_activate":"<a href='%s'>%s</a> was activated by <a href='%s'>%s</a>",
+		"panel_logs_mod_action_unknown":"Unknown action '%s' on elementType '%s' by <a href='%s'>%s</a>",
+		"panel_logs_mod_no_logs":"There aren't any events logged.",
 
 		"user_unknown":"Unknown",
 		"topic_unknown":"Unknown",
