--- a/langs/english.json
+++ b/langs/english.json
@@ -720,33 +720,38 @@
 		"paginator.next_page":"›",
 		"paginator.next_page_aria":"Go to the next page",
 
-		"profile_login_for_options":"Login for options",
-		"profile_send_message":"Send Message",
-		"profile_add_friend":"Add Friend",
-		"profile_unban":"Unban",
-		"profile_ban":"Ban",
-		"profile_block":"Block",
-		"profile_unblock":"Unblock",
-		"profile_report_user_tooltip":"Report User",
-		"profile_report_user_aria":"Report User",
-		"profile_ban_user_head":"Ban User",
-		"profile_ban_user_notice":"If all the fields are left blank, the ban will be permanent.",
-		"profile_ban_user_days":"Days",
-		"profile_ban_user_weeks":"Weeks",
-		"profile_ban_user_months":"Months",
-		"profile_ban_user_reason":"Reason",
-		"profile_ban_user_button":"Ban User",
-		"profile_comments_head":"Comments",
-		"profile_comments_edit_tooltip":"Edit Item",
-		"profile_comments_edit_aria":"Edit Item",
-		"profile_comments_delete_tooltip":"Delete Item",
-		"profile_comments_delete_aria":"Delete Item",
-		"profile_comments_report_tooltip":"Report Item",
-		"profile_comments_report_aria":"Report Item",
-		"profile_comments_form_content":"Insert comment here",
-		"profile_comments_form_button":"Create Reply",
-		"profile_comments_form_guest":"You need to login to comment on this profile.",
-		"profile_owner_tag":"Profile Owner",
+		"profile.login_for_options":"Login for options",
+		"profile.send_message":"Send Message",
+		"profile.add_friend":"Add Friend",
+		"profile.unban":"Unban",
+		"profile.ban":"Ban",
+		"profile.delete_posts":"Delete Posts",
+		"profile.block":"Block",
+		"profile.unblock":"Unblock",
+		"profile.report_user_tooltip":"Report User",
+		"profile.report_user_aria":"Report User",
+		"profile.ban_user_head":"Ban User",
+		"profile.ban_user_notice":"If all the fields are left blank, the ban will be permanent.",
+		"profile.ban_user_days":"Days",
+		"profile.ban_user_weeks":"Weeks",
+		"profile.ban_user_months":"Months",
+		"profile.ban_user_reason":"Reason",
+		"profile.ban_user_button":"Ban User",
+		"profile.ban_delete_posts":"Delete Posts",
+		"profile.delete_posts_head":"Delete Posts",
+		"profile.delete_posts_notice":"Would you like to delete %d posts?",
+		"profile.delete_posts_button":"Delete Posts",
+		"profile.comments_head":"Comments",
+		"profile.comments_edit_tooltip":"Edit Item",
+		"profile.comments_edit_aria":"Edit Item",
+		"profile.comments_delete_tooltip":"Delete Item",
+		"profile.comments_delete_aria":"Delete Item",
+		"profile.comments_report_tooltip":"Report Item",
+		"profile.comments_report_aria":"Report Item",
+		"profile.comments_form_content":"Insert comment here",
+		"profile.comments_form_button":"Create Reply",
+		"profile.comments_form_guest":"You need to login to comment on this profile.",
+		"profile.owner_tag":"Profile Owner",
 
 		"ip_search_head":"IP Search",
 		"ip_search_search_button":"Search",
