Let users unlike posts. Hide like buttons on own posts for Tempra Simple and Shadow themes too. fix like visual ui. fix topic.Unlike err return.
Add topic.minus_one phrase.

--- a/langs/english.json
+++ b/langs/english.json
@@ -394,6 +394,7 @@
 		"topic.view_count_suffix":" views",
 		"topic.plus":"+",
 		"topic.plus_one":"+1",
+		"topic.minus_one":"-1",
 		"topic.gap_up":" up",
 		"topic.quote_button_text":"Quote",
 		"topic.edit_button_text":"Edit",
