Add registered time as a parameter for group promotions. Run group promotions on group change. Run group promotions on registration. Load the CreatedAt field when users are loaded. Set the default for last_ip properly. Fix the default values in the group promotion form. Add initial group promotion tests.
Add panel_group_promotion_registered_for phrase.
Add the registeredFor column to the users_groups_promotions table.

You will need to run the updater / patcher for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -932,6 +932,7 @@
 		"panel_group_promotions_two_way":"Two Way",
 		"panel_group_promotions_level":"Level",
 		"panel_group_promotions_posts":"Posts",
+		"panel_group_promotion_registered_for":"Registered For",
 		"panel_group_promotions_create_button":"Add Promotion",
 
 		"panel_word_filters_head":"Word Filters",
