initial perf anaytics add tasks to debug page ignore .git on debug page for speed
add perfchunks table

Renamed phrases (changed statistics to stats):
panel_menu_stats
panel_menu_stats_posts
panel_menu_stats_topics
panel_menu_stats_forums
panel_menu_stats_routes
panel_menu_stats_agents
panel_menu_stats_systems
panel_menu_stats_languages
panel_menu_stats_referrers
panel_menu_stats_memory
panel_menu_stats_active_memory
panel_menu_stats_perf
panel_stats_views_head_suffix
panel_stats_user_agents_head
panel_stats_forums_head
panel_stats_languages_head
panel_stats_post_counts_head
panel_stats_referrers_head
panel_stats_routes_head
panel_stats_operating_systems_head
panel_stats_topic_counts_head
panel_stats_requests_head
panel_stats_memory_head
panel_stats_active_memory_head
panel_stats_spam_hide
panel_stats_spam_show
panel_stats_memory_type_total
panel_stats_memory_type_stack
panel_stats_memory_type_heap
panel_stats_time_range_one_year
panel_stats_time_range_three_months
panel_stats_time_range_one_month
panel_stats_time_range_one_week
panel_stats_time_range_two_days
panel_stats_time_range_one_day
panel_stats_time_range_twelve_hours
panel_stats_time_range_six_hours
panel_stats_post_counts_chart_aria
panel_stats_topic_counts_chart_aria
panel_stats_requests_chart_aria
panel_stats_memory_chart_aria
panel_stats_details_head
panel_stats_post_counts_table_aria
panel_stats_topic_counts_table_aria
panel_stats_route_views_table_aria
panel_stats_requests_table_aria
panel_stats_memory_table_aria
panel_stats_views_suffix
panel_stats_posts_suffix
panel_stats_topics_suffix
panel_stats_user_agents_no_user_agents
panel_stats_forums_no_forums
panel_stats_languages_no_languages
panel_stats_post_counts_no_post_counts
panel_stats_referrers_no_referrers
panel_stats_routes_no_routes
panel_stats_operating_systems_no_operating_systems
panel_stats_memory_no_memory

Added phrases:
panel_debug_tasks
panel_debug_tasks_half_second
panel_debug_tasks_second
panel_debug_tasks_fifteen_minute
panel_debug_t

--- a/langs/english.json
+++ b/langs/english.json
@@ -795,17 +795,18 @@
 		"panel_menu_menus":"Menus",
 		"panel_menu_widgets":"Widgets",
 		"panel_menu_events":"Events",
-		"panel_menu_statistics":"Statistics",
-		"panel_menu_statistics_posts":"Posts",
-		"panel_menu_statistics_topics":"Topics",
-		"panel_menu_statistics_forums":"Forums",
-		"panel_menu_statistics_routes":"Routes",
-		"panel_menu_statistics_agents":"Agents",
-		"panel_menu_statistics_systems":"Systems",
-		"panel_menu_statistics_languages":"Languages",
-		"panel_menu_statistics_referrers":"Referrers",
-		"panel_menu_statistics_memory":"Memory",
-		"panel_menu_statistics_active_memory":"Active Memory",
+		"panel_menu_stats":"Statistics",
+		"panel_menu_stats_posts":"Posts",
+		"panel_menu_stats_topics":"Topics",
+		"panel_menu_stats_forums":"Forums",
+		"panel_menu_stats_routes":"Routes",
+		"panel_menu_stats_agents":"Agents",
+		"panel_menu_stats_systems":"Systems",
+		"panel_menu_stats_languages":"Languages",
+		"panel_menu_stats_referrers":"Referrers",
+		"panel_menu_stats_memory":"Memory",
+		"panel_menu_stats_active_memory":"Active Memory",
+		"panel_menu_stats_perf":"Performance",
 		"panel_menu_reports":"Reports",
 		"panel_menu_logs":"Logs",
 		"panel_menu_logs_registrations":"Registrations",
@@ -975,56 +976,60 @@
 		"panel_pages_title":"Title",
 		"panel_pages_edit_update_button":"Update Page",
 
-		"panel_statistics_views_head_suffix":" Views",
-		"panel_statistics_user_agents_head":"User Agents",
-		"panel_statistics_forums_head":"Forums",
-		"panel_statistics_languages_head":"Languages",
-		"panel_statistics_post_counts_head":"Post Counts",
-		"panel_statistics_referrers_head":"Referrers",
-		"panel_statistics_routes_head":"Routes",
-		"panel_statistics_operating_systems_head":"Operating Systems",
-		"panel_statistics_topic_counts_head":"Topic Counts",
-		"panel_statistics_requests_head":"Requests",
-		"panel_statistics_memory_head":"Memory Usage",
-		"panel_statistics_active_memory_head":"Active Memory",
+		"panel_stats_views_head_suffix":" Views",
+		"panel_stats_user_agents_head":"User Agents",
+		"panel_stats_forums_head":"Forums",
+		"panel_stats_languages_head":"Languages",
+		"panel_stats_post_counts_head":"Post Counts",
+		"panel_stats_referrers_head":"Referrers",
+		"panel_stats_routes_head":"Routes",
+		"panel_stats_operating_systems_head":"Operating Systems",
+		"panel_stats_topic_counts_head":"Topic Counts",
+		"panel_stats_requests_head":"Requests",
+		"panel_stats_memory_head":"Memory Usage",
+		"panel_stats_active_memory_head":"Active Memory",
+		"panel_stats_perf_head":"Performance",
 
-		"panel_statistics_spam_hide":"Hide Spam",
-		"panel_statistics_spam_show":"Show Spam",
-		"panel_statistics_memory_type_total":"Total",
-		"panel_statistics_memory_type_stack":"Stack",
-		"panel_statistics_memory_type_heap":"Heap",
+		"panel_stats_spam_hide":"Hide Spam",
+		"panel_stats_spam_show":"Show Spam",
+		"panel_stats_memory_type_total":"Total",
+		"panel_stats_memory_type_stack":"Stack",
+		"panel_stats_memory_type_heap":"Heap",
+		"panel_stats_perf_low":"Low",
+		"panel_stats_perf_high":"High",
+		"panel_stats_perf_avg":"Average",
 
-		"panel_statistics_time_range_one_year":"1 year",
-		"panel_statistics_time_range_three_months":"3 months",
-		"panel_statistics_time_range_one_month":"1 month",
-		"panel_statistics_time_range_one_week":"1 week",
-		"panel_statistics_time_range_two_days":"2 days",
-		"panel_statistics_time_range_one_day":"1 day",
-		"panel_statistics_time_range_twelve_hours":"12 hours",
-		"panel_statistics_time_range_six_hours":"6 hours",
+		"panel_stats_time_range_one_year":"1 year",
+		"panel_stats_time_range_three_months":"3 months",
+		"panel_stats_time_range_one_month":"1 month",
+		"panel_stats_time_range_one_week":"1 week",
+		"panel_stats_time_range_two_days":"2 days",
+		"panel_stats_time_range_one_day":"1 day",
+		"panel_stats_time_range_twelve_hours":"12 hours",
+		"panel_stats_time_range_six_hours":"6 hours",
 
-		"panel_statistics_post_counts_chart_aria":"Post Chart",
-		"panel_statistics_topic_counts_chart_aria":"Topic Chart",
-		"panel_statistics_requests_chart_aria":"Requests Chart",
-		"panel_statistics_memory_chart_aria":"Memory Use Chart",
-		"panel_statistics_details_head":"Details",
-		"panel_statistics_post_counts_table_aria":"Post Table, this has the same information as the post chart",
-		"panel_statistics_topic_counts_table_aria":"Topic Table, this has the same information as the topic chart",
-		"panel_statistics_route_views_table_aria":"View Table, this has the same information as the view chart",
-		"panel_statistics_requests_table_aria":"View Table, this has the same information as the view chart",
-		"panel_statistics_memory_table_aria":"Memory Use Table, this has the same information as the memory use chart",
-		"panel_statistics_views_suffix":" views",
-		"panel_statistics_posts_suffix":" posts",
-		"panel_statistics_topics_suffix":" topics",
+		"panel_stats_post_counts_chart_aria":"Post Chart",
+		"panel_stats_topic_counts_chart_aria":"Topic Chart",
+		"panel_stats_requests_chart_aria":"Requests Chart",
+		"panel_stats_memory_chart_aria":"Memory Use Chart",
+		"panel_stats_details_head":"Details",
+		"panel_stats_post_counts_table_aria":"Post Table, this has the same information as the post chart",
+		"panel_stats_topic_counts_table_aria":"Topic Table, this has the same information as the topic chart",
+		"panel_stats_route_views_table_aria":"View Table, this has the same information as the view chart",
+		"panel_stats_requests_table_aria":"View Table, this has the same information as the view chart",
+		"panel_stats_memory_table_aria":"Memory Use Table, this has the same information as the memory use chart",
+		"panel_stats_views_suffix":" views",
+		"panel_stats_posts_suffix":" posts",
+		"panel_stats_topics_suffix":" topics",
 
-		"panel_statistics_user_agents_no_user_agents":"No user agents could be found in the selected time range",
-		"panel_statistics_forums_no_forums":"No forum view counts could be found in the selected time range",
-		"panel_statistics_languages_no_languages":"No language could be found in the selected time range",
-		"panel_statistics_post_counts_no_post_counts":"No posts could be found in the selected time range",
-		"panel_statistics_referrers_no_referrers":"No referrers could be found in the selected time range",
-		"panel_statistics_routes_no_routes":"No route view counts could be found in the selected time range",
-		"panel_statistics_operating_systems_no_operating_systems":"No operating systems could be found in the selected time range",
-		"panel_statistics_memory_no_memory":"No memory chunks could be found in the selected time range",
+		"panel_stats_user_agents_no_user_agents":"No user agents could be found in the selected time range",
+		"panel_stats_forums_no_forums":"No forum view counts could be found in the selected time range",
+		"panel_stats_languages_no_languages":"No language could be found in the selected time range",
+		"panel_stats_post_counts_no_post_counts":"No posts could be found in the selected time range",
+		"panel_stats_referrers_no_referrers":"No referrers could be found in the selected time range",
+		"panel_stats_routes_no_routes":"No route view counts could be found in the selected time range",
+		"panel_stats_operating_systems_no_operating_systems":"No operating systems could be found in the selected time range",
+		"panel_stats_memory_no_memory":"No memory chunks could be found in the selected time range",
 
 		"panel_logs_menu_head":"Logs",
 		"panel_logs_reg_head":"Registrations",
@@ -1172,6 +1177,13 @@
 
 		"panel_debug_goroutine_count_label":"Goroutines",
 		"panel_debug_cpu_count_label":"CPUs",
+
+		"panel_debug_tasks":"Tasks",
+		"panel_debug_tasks_half_second":"Half Second",
+		"panel_debug_tasks_second":"Second",
+		"panel_debug_tasks_fifteen_minute":"Fifteen Minute",
+		"panel_debug_tasks_hour":"Hourly",
+		"panel_debug_tasks_shutdown":"Shutdown",
 
 		"panel_debug_memory_stats":"Memory Statistics",
 		"panel_debug_memory_stats_sys":"Sys",
