add archive.org user agent

--- a/langs/english.json
+++ b/langs/english.json
@@ -209,6 +209,7 @@
 		"discord":"Discord",
 		"twitter":"Twitterbot",
 		"cloudflare":"Cloudflare Alwayson",
+		"archive_org":"Archive.org",
 		"uptimebot":"Uptimebot",
 		"slackbot":"Slackbot",
 		"facebook":"FacebookBot",
