add AhrefsBot user agent

--- a/langs/english.json
+++ b/langs/english.json
@@ -221,6 +221,7 @@
 		
 		"semrush":"SemrushBot",
 		"dotbot":"DotBot",
+		"ahrefs":"Ahrefs",
 		"majestic":"MJ12bot",
 		"aspiegel":"AspiegelBot",
 		"zgrab":"Zgrab App Scanner",
