add haosou, proximic and mail_ru user agents add pre_global js hook try to fix archive.org ua patching don't word split uas at _

--- a/langs/english.json
+++ b/langs/english.json
@@ -204,6 +204,7 @@
 		"exabot":"Exabot",
 		"sogou":"Sogou",
 		"toutiao":"Toutiao",
+		"haosou":"Qihoo 360 Search",
 		"baidu":"Baidu",
 		"duckduckgo":"DuckDuckBot",
 		"seznambot":"SeznamBot",
@@ -222,8 +223,10 @@
 		"semrush":"SemrushBot",
 		"dotbot":"DotBot",
 		"ahrefs":"Ahrefs",
+		"proximic":"Comscore",
 		"majestic":"MJ12bot",
 		"aspiegel":"AspiegelBot",
+		"mail_ru":"Mail.ru bot",
 		"zgrab":"Zgrab App Scanner",
 		"suspicious":"Suspicious",
 		"unknown":"Unknown",
