--- a/langs/english.json
+++ b/langs/english.json
@@ -202,6 +202,7 @@
 		"bing":"Bing",
 		"slurp":"Yahoo! Slurp",
 		"exabot":"Exabot",
+		"mojeek":"MojeekBot",
 		"sogou":"Sogou",
 		"toutiao":"Toutiao",
 		"haosou":"Qihoo 360 Search",
