add cliqz, blexbot, curl user agents add a /static/ redirect for the slower bots x.x tweak slack, facebook ua phrases avoid more allocs for ajax topic

--- a/langs/english.json
+++ b/langs/english.json
@@ -203,6 +203,7 @@
 		"slurp":"Yahoo! Slurp",
 		"exabot":"Exabot",
 		"mojeek":"MojeekBot",
+		"cliqz":"Cliqzbot",
 		"sogou":"Sogou",
 		"toutiao":"Toutiao",
 		"haosou":"Qihoo 360 Search",
@@ -214,8 +215,8 @@
 		"cloudflare":"Cloudflare Alwayson",
 		"archive_org":"Archive.org",
 		"uptimebot":"Uptimebot",
-		"slackbot":"Slackbot",
-		"facebook":"FacebookBot",
+		"slackbot":"Slack",
+		"facebook":"Facebook",
 		"apple":"AppleBot",
 		"discourse":"Discourse Forum Onebox",
 		"alexa":"Alexa",
@@ -226,9 +227,11 @@
 		"ahrefs":"Ahrefs",
 		"proximic":"Comscore",
 		"majestic":"MJ12bot",
+		"blexbot":"BLEXBot",
 		"aspiegel":"AspiegelBot",
 		"mail_ru":"Mail.ru bot",
 		"zgrab":"Zgrab App Scanner",
+		"curl":"curl",
 		"suspicious":"Suspicious",
 		"unknown":"Unknown",
 		"blank":"Blank",
