add website datenbank user agent reduce redundancy and fix sublties in StaticFile()

--- a/langs/english.json
+++ b/langs/english.json
@@ -204,6 +204,7 @@
 		"exabot":"Exabot",
 		"mojeek":"MojeekBot",
 		"cliqz":"Cliqzbot",
+		"datenbank":"Website Datenbank",
 		"sogou":"Sogou",
 		"toutiao":"Toutiao",
 		"haosou":"Qihoo 360 Search",
