add python and go user agents. add new bot class for python, go and curl to reduce resource usage. don't push canonicals for loggedin users try to avoid pushing google site verify when it isn't necessary give ahrefs the semrush treatment

--- a/langs/english.json
+++ b/langs/english.json
@@ -233,6 +233,8 @@
 		"mail_ru":"Mail.ru bot",
 		"zgrab":"Zgrab App Scanner",
 		"curl":"curl",
+		"python":"Python Bot",
+		"go":"Go Bot",
 		"suspicious":"Suspicious",
 		"unknown":"Unknown",
 		"blank":"Blank",
