increase the number of agents on the ua chart optimise mfaVerifySession reduce boilerplate for populating the menu items shorten ua phrases for semrush and aspiegel rename account_username_updated phrase to account_name_updated

--- a/langs/english.json
+++ b/langs/english.json
@@ -223,13 +223,13 @@
 		"alexa":"Alexa",
 		"lynx":"Lynx",
 		
-		"semrush":"SemrushBot",
+		"semrush":"Semrush",
 		"dotbot":"DotBot",
 		"ahrefs":"Ahrefs",
 		"proximic":"Comscore",
 		"majestic":"MJ12bot",
 		"blexbot":"BLEXBot",
-		"aspiegel":"AspiegelBot",
+		"aspiegel":"Aspiegel",
 		"mail_ru":"Mail.ru bot",
 		"zgrab":"Zgrab App Scanner",
 		"curl":"curl",
@@ -341,7 +341,7 @@
 		"account_banned":"Your account has been suspended. Some of your permissions may have been revoked.",
 		"account_inactive":"Your account hasn't been activated yet. Some features may remain unavailable until it is.",
 		"account_avatar_updated":"Your avatar was successfully updated.",
-		"account_username_updated":"Your username was successfully updated.",
+		"account_name_updated":"Your name was successfully updated.",
 		"account_mail_disabled":"The mail system is currently disabled.",
 		"account_mail_verify_success":"Your email was successfully verified.",
 		"account_mfa_setup_success":"Two-factor authentication was successfully setup for your account.",
