add CCBot user agent

--- a/langs/english.json
+++ b/langs/english.json
@@ -232,6 +232,7 @@
 		"blexbot":"BLEXBot",
 		"aspiegel":"Aspiegel",
 		"mail_ru":"Mail.ru bot",
+		"ccbot":"CCBot",
 		"zgrab":"Zgrab App Scanner",
 		"curl":"curl",
 		"python":"Python Bot",
