add nimbostratus user agent

--- a/langs/english.json
+++ b/langs/english.json
@@ -234,6 +234,7 @@
 		"mail_ru":"Mail.ru bot",
 		"ccbot":"CCBot",
 		"zgrab":"Zgrab App Scanner",
+		"cloudsystemnetworks":"Nimbostratus / Cloud System Networks",
 		"curl":"curl",
 		"python":"Python Bot",
 		"go":"Go Bot",
