--- a/langs/english.json
+++ b/langs/english.json
@@ -230,6 +230,7 @@
 		"proximic":"Comscore",
 		"majestic":"MJ12bot",
 		"blexbot":"BLEXBot",
+		"burf":"Burf.co",
 		"aspiegel":"Aspiegel",
 		"mail_ru":"Mail.ru bot",
 		"ccbot":"CCBot",
