add netcraft user agent and alt mj12bot matcher

--- a/langs/english.json
+++ b/langs/english.json
@@ -229,6 +229,7 @@
 		"ahrefs":"Ahrefs",
 		"proximic":"Comscore",
 		"majestic":"MJ12bot",
+		"netcraft":"Netcraft",
 		"blexbot":"BLEXBot",
 		"burf":"Burf.co",
 		"aspiegel":"Aspiegel",
