hover styling for topic list moderation add megaindex user agent reduce boilerplate and save bytes hide elapsed on nox mobile

--- a/langs/english.json
+++ b/langs/english.json
@@ -228,6 +228,7 @@
 		"dotbot":"DotBot",
 		"ahrefs":"Ahrefs",
 		"proximic":"Comscore",
+		"megaindex":"MegaIndex",
 		"majestic":"MJ12bot",
 		"netcraft":"Netcraft",
 		"blexbot":"BLEXBot",
