add headless chrome ua

--- a/langs/english.json
+++ b/langs/english.json
@@ -241,6 +241,7 @@
 		"curl":"curl",
 		"python":"Python Bot",
 		"go":"Go Bot",
+		"headlesschrome":"Headless Chrome",
 		"suspicious":"Suspicious",
 		"unknown":"Unknown",
 		"blank":"Blank",
