add cocolyze, babbar, surdotly, awesome_bot user agents reduce matching in the router slightly use hookgen for router_after_filters use hookgen for router_pre_route shorten ua buffer variable name skip more symbols in initial ua loop shorten vulnscan string avoid unneccessary fork in ua logic

--- a/langs/english.json
+++ b/langs/english.json
@@ -230,6 +230,9 @@
 		"proximic":"Comscore",
 		"megaindex":"MegaIndex",
 		"majestic":"MJ12bot",
+		"cocolyze":"Cocolyze",
+		"babbar":"Babbar",
+		"surdotly":"Surdotly",
 		"netcraft":"Netcraft",
 		"blexbot":"BLEXBot",
 		"burf":"Burf.co",
@@ -242,6 +245,7 @@
 		"python":"Python Bot",
 		"go":"Go Bot",
 		"headlesschrome":"Headless Chrome",
+		"awesome_bot":"Awesome Bot",
 		"suspicious":"Suspicious",
 		"unknown":"Unknown",
 		"blank":"Blank",
