add telegram, domcop, maui and alt aspiegel user agents reduce boilerplate in routergen

--- a/langs/english.json
+++ b/langs/english.json
@@ -212,6 +212,7 @@
 		"duckduckgo":"DuckDuckBot",
 		"seznambot":"SeznamBot",
 		"discord":"Discord",
+		"telegram":"TelegramBot",
 		"twitter":"Twitterbot",
 		"cloudflare":"Cloudflare Alwayson",
 		"archive_org":"Archive.org",
@@ -233,6 +234,7 @@
 		"cocolyze":"Cocolyze",
 		"babbar":"Babbar",
 		"surdotly":"Surdotly",
+		"domcop":"DomCopBot",
 		"netcraft":"Netcraft",
 		"blexbot":"BLEXBot",
 		"burf":"Burf.co",
@@ -241,6 +243,7 @@
 		"ccbot":"CCBot",
 		"zgrab":"Zgrab App Scanner",
 		"cloudsystemnetworks":"Nimbostratus / Cloud System Networks",
+		"maui":"MauiBot",
 		"curl":"curl",
 		"python":"Python Bot",
 		"go":"Go Bot",
