Add per-user profile comment visibility settings. Honor user blocks in ProfileReplyEditSubmit. Reduce boilerplate.
Update account_privacy_profile_comments phrase.
Add account_privacy_profile_comments_public phrase.
Add account_privacy_profile_comments_registered phrase.
Add account_privacy_profile_comments_self phrase.
Add account_privacy_enable_embeds phrase.

Add profile_comments column to users table.
Add who_can_convo column to users table.

You will need to run the updater / patcher for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -577,7 +577,11 @@
 		"account_password_update_button":"Update",
 
 		"account_privacy_head":"Privacy",
-		"account_privacy_profile_comments":"Enable Profile Comments",
+		"account_privacy_profile_comments":"Profile Comment Visibility",
+		"account_privacy_profile_comments_public":"Anyone",
+		"account_privacy_profile_comments_registered":"Registered Users",
+		"account_privacy_profile_comments_self":"Only Me",
+		"account_privacy_enable_embeds":"Enable Embeds",
 		"account_privacy_button":"Update",
 
 		"account_mfa_head":"Manage 2FA",
