bulk mod: cancel bulk mod mode bulk mod: fix init binding bulk mod: cancel bulk mod mode during page transitions js: more logging js: add before_init_bind_page hook js: add end_unbind_page hook js: change end_bind_page to init hook js: change end_bind_topic to init hook nox: add padding to no alerts alert phrases: add topic_list.cancel_mod

--- a/langs/english.json
+++ b/langs/english.json
@@ -645,6 +645,7 @@
 		"topic_list.moderate_short":"Mod",
 		"topic_list.moderate_tooltip":"Moderate",
 		"topic_list.moderate_aria":"Moderate Posts",
+		"topic_list.cancel_mod":"Cancel Mod",
 		"topic_list.what_to_do":"What do you want to do with these {0} topics?",
 		"topic_list.what_to_do_single":"What do you want to do with this topic?",
 		"topic_list.moderate_delete":"Delete them",
