--- a/langs/english.json
+++ b/langs/english.json
@@ -895,6 +895,13 @@
 		"panel_users_ban":"Ban",
 		"panel_users_activate":"Activate",
 
+		"panel_users_search_head":"Search",
+		"panel_users_search_name":"Name",
+		"panel_users_search_name_placeholder":"John Doe",
+		"panel_users_search_email":"Email",
+		"panel_users_search_email_placeholder":"john.doe@example.com",
+		"panel_users_search_button":"Search",
+
 		"panel_user_head":"User Editor",
 		"panel_user_avatar":"Avatar",
 		"panel_user_avatar_select":"Select",
